--- a/index.html
+++ b/index.html
@@ -3,136 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Control Mini App</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Telegram Mini App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'VT323', monospace;
-            background: linear-gradient(to bottom, #f4e7d3, #d9c2a6);
-            color: #4a3728;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .btn {
-            @apply bg-[#a68a64] text-white py-2 px-4 rounded-lg shadow-md hover:bg-[#8b6f47] transition duration-300;
-        }
-        .section-title {
-            @apply text-2xl mb-4 text-center text-[#4a3728];
-        }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <h1 class="text-4xl text-center mb-8">PC Control Mini App</h1>
-        
+<body class="bg-gray-100 font-sans">
+    <div class="container mx-auto p-4">
+        <h1 class="text-2xl font-bold mb-4 text-center">Mini App</h1>
+
+        <!-- Discord Section -->
         <div class="mb-8">
-            <h2 class="section-title">Control Commands</h2>
-            <div class="grid grid-cols-2 gap-4">
-                <button class="btn" onclick="sendCommand('/install_vnc')">Install VNC</button>
-                <button class="btn" onclick="sendCommand('/get_ip')">Get IP</button>
-                <button class="btn" onclick="sendCommand('/stream_screen')">Stream Screen</button>
-                <button class="btn" onclick="sendCommand('/stop_stream')">Stop Stream</button>
-                <button class="btn" onclick="sendCommand('/move_mouse')">Move Mouse</button>
-                <button class="btn" onclick="sendCommand('/click')">Click</button>
-                <button class="btn" onclick="sendCommand('/scroll')">Scroll</button>
-                <button class="btn" onclick="sendCommand('/press_key')">Press Key</button>
-                <button class="btn" onclick="sendCommand('/run_command')">Run Command</button>
-                <button class="btn" onclick="sendCommand('/list_files')">List Files</button>
-                <button class="btn" onclick="sendCommand('/delete_file')">Delete File</button>
-                <button class="btn" onclick="sendCommand('/copy_file')">Copy File</button>
-                <button class="btn" onclick="sendCommand('/open_image')">Open Image</button>
-                <button class="btn" onclick="sendCommand('/alt_tab')">Alt+Tab</button>
-                <button class="btn" onclick="sendCommand('/move_up')">Move Up</button>
-                <button class="btn" onclick="sendCommand('/move_right')">Move Right</button>
-                <button class="btn" onclick="sendCommand('/disable_mouse')">Disable Mouse</button>
-                <button class="btn" onclick="sendCommand('/screenshot')">Screenshot</button>
-            </div>
+            <h2 class="section-title text-xl font-semibold mb-2">Discord Commands</h2>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="authorizeDiscord()">Authorize Discord</button>
+            <input id="server-id" type="text" placeholder="Enter Discord Server ID" class="border p-2 mb-2 w-full">
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="openDiscordServer()">Open Discord Server</button>
         </div>
 
+        <!-- Mouse Control Section -->
         <div class="mb-8">
-            <h2 class="section-title">Grok Commands</h2>
-            <div class="grid grid-cols-2 gap-4">
-                <button class="btn" onclick="sendCommand('/grok')">Grok</button>
-                <button class="btn" onclick="sendCommand('/edit_code')">Edit Code</button>
-                <button class="btn" onclick="sendCommand('/update_code')">Update Code</button>
-                <button class="btn" onclick="sendCommand('/restart_bot')">Restart Bot</button>
-            </div>
+            <h2 class="section-title text-xl font-semibold mb-2">Mouse Control</h2>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('screenshot')">Screenshot</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('open_image')">Open Image</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('alt_tab')">Alt+Tab</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('move_up')">Move Up</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('move_right')">Move Right</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('disable_mouse')">Disable Mouse</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('get_ip')">Get IP</button>
+            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('install_vnc')">Install VNC</button>
         </div>
 
-        <div>
-            <h2 class="section-title">Trolling Commands</h2>
-            <div class="grid grid-cols-2 gap-4">
-                <button class="btn" onclick="sendCommand('/troll_sound1')">Sound Error</button>
-                <button class="btn" onclick="sendCommand('/troll_sound2')">Sound Notification</button>
-                <button class="btn" onclick="sendCommand('/troll_sound3')">Sound Ring</button>
-                <button class="btn" onclick="sendCommand('/troll_random_move')">Random Move</button>
-                <button class="btn" onclick="sendCommand('/troll_open_rickroll')">Open Rickroll</button>
-                <button class="btn" onclick="sendCommand('/troll_open_meme')">Open Meme</button>
-                <button class="btn" onclick="sendCommand('/troll_open_cat')">Open Cat</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_hack')">Fake Hack</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_error')">Fake Error</button>
-                <button class="btn" onclick="sendCommand('/troll_type_joke')">Type Joke</button>
-                <button class="btn" onclick="sendCommand('/troll_open_notepad')">Open Notepad</button>
-                <button class="btn" onclick="sendCommand('/troll_volume_up')">Volume Up</button>
-                <button class="btn" onclick="sendCommand('/troll_volume_down')">Volume Down</button>
-                <button class="btn" onclick="sendCommand('/troll_capslock')">Caps Lock</button>
-                <button class="btn" onclick="sendCommand('/troll_random_click')">Random Click</button>
-                <button class="btn" onclick="sendCommand('/troll_open_calculator')">Open Calculator</button>
-                <button class="btn" onclick="sendCommand('/troll_open_paint')">Open Paint</button>
-                <button class="btn" onclick="sendCommand('/troll_minimize_all')">Minimize All</button>
-                <button class="btn" onclick="sendCommand('/troll_maximize')">Maximize</button>
-                <button class="btn" onclick="sendCommand('/troll_type_chaos')">Type Chaos</button>
-                <button class="btn" onclick="sendCommand('/troll_open_youtube')">Open YouTube</button>
-                <button class="btn" onclick="sendCommand('/troll_open_browser')">Open Browser</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_update')">Fake Update</button>
-                <button class="btn" onclick="sendCommand('/troll_mouse_circle')">Mouse Circle</button>
-                <button class="btn" onclick="sendCommand('/troll_sound_loop')">Sound Loop</button>
-                <button class="btn" onclick="sendCommand('/troll_open_sticky')">Open Sticky</button>
-                <button class="btn" onclick="sendCommand('/troll_type_rickroll')">Type Rickroll</button>
-                <button class="btn" onclick="sendCommand('/troll_open_cmd')">Open CMD</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_shutdown')">Fake Shutdown</button>
-                <button class="btn" onclick="sendCommand('/troll_mouse_zigzag')">Mouse Zigzag</button>
-                <button class="btn" onclick="sendCommand('/troll_open_explorer')">Open Explorer</button>
-                <button class="btn" onclick="sendCommand('/troll_sound_ding')">Sound Ding</button>
-                <button class="btn" onclick="sendCommand('/troll_type_meme')">Type Meme</button>
-                <button class="btn" onclick="sendCommand('/troll_open_clock')">Open Clock</button>
-                <button class="btn" onclick="sendCommand('/troll_random_scroll')">Random Scroll</button>
-                <button class="btn" onclick="sendCommand('/troll_open_photos')">Open Photos</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_virus')">Fake Virus</button>
-                <button class="btn" onclick="sendCommand('/troll_mouse_jump')">Mouse Jump</button>
-                <button class="btn" onclick="sendCommand('/troll_open_control')">Open Control</button>
-                <button class="btn" onclick="sendCommand('/troll_sound_beep')">Sound Beep</button>
-                <button class="btn" onclick="sendCommand('/troll_type_nonsense')">Type Nonsense</button>
-                <button class="btn" onclick="sendCommand('/troll_open_settings')">Open Settings</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_crash')">Fake Crash</button>
-                <button class="btn" onclick="sendCommand('/troll_mouse_shake')">Mouse Shake</button>
-                <button class="btn" onclick="sendCommand('/troll_open_taskmgr')">Open Task Manager</button>
-                <button class="btn" onclick="sendCommand('/troll_sound_alert')">Sound Alert</button>
-                <button class="btn" onclick="sendCommand('/troll_type_emoji')">Type Emoji</button>
-                <button class="btn" onclick="sendCommand('/troll_open_snip')">Open Snip</button>
-                <button class="btn" onclick="sendCommand('/troll_fake_battery')">Fake Battery</button>
-                <button class="btn" onclick="sendCommand('/troll_mouse_random')">Mouse Random</button>
-                <button class="btn" onclick="sendCommand('/troll_open_weather')">Open Weather</button>
-                <button class="btn" onclick="sendCommand('/troll_sound_chime')">Sound Chime</button>
-            </div>
+        <!-- Trolling Commands Section -->
+        <div class="mb-8">
+            <h2 class="section-title text-xl font-semibold mb-2">Trolling Commands</h2>
+            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_open_notepad')">Open Notepad</button>
+            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_open_rickroll')">Open Rickroll</button>
+            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_fake_virus')">Fake Virus</button>
+            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_mouse_shake')">Mouse Shake</button>
+        </div>
+
+        <!-- Grok Commands Section -->
+        <div class="mb-8">
+            <h2 class="section-title text-xl font-semibold mb-2">Grok Commands</h2>
+            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('grok')">Ask Grok</button>
+            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('edit_code')">Edit Code</button>
+            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('update_code')">Update Code</button>
+            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('restart_bot')">Restart Bot</button>
         </div>
     </div>
 
     <script>
+        // Initialize Telegram Web App
+        Telegram.WebApp.ready();
+        Telegram.WebApp.expand();
+        Telegram.WebApp.setHeaderColor('#f4e7d3');
+        Telegram.WebApp.setBackgroundColor('#f4e7d3');
+
+        // Send command to Telegram Bot
         function sendCommand(command) {
             Telegram.WebApp.sendData(command);
             Telegram.WebApp.close();
         }
 
-        // Настройка темы Telegram
-        Telegram.WebApp.expand();
-        Telegram.WebApp.setHeaderColor('#f4e7d3');
-        Telegram.WebApp.setBackgroundColor('#f4e7d3');
+        // Authorize Discord
+        function authorizeDiscord() {
+            const clientId = "YOUR_CLIENT_ID"; // Замените на ваш Client ID
+            const redirectUri = encodeURIComponent("https://gusikthebest.github.io/teleg/auth");
+            const oauthUrl = `https://discord.com/api/oauth2/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&response_type=code&scope=identify%20guilds`;
+            window.open(oauthUrl, '_blank');
+        }
+
+        // Open Discord Server
+        function openDiscordServer() {
+            const serverId = document.getElementById('server-id').value;
+            if (!serverId) {
+                alert('Please enter a Discord Server ID');
+                return;
+            }
+            Telegram.WebApp.sendData(JSON.stringify({ command: 'open_discord_server', server_id: serverId }));
+            Telegram.WebApp.close();
+        }
     </script>
 </body>
 </html>
