--- a/index.html
+++ b/index.html
@@ -3,84 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Mini App</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>Roblox Style PC Control Mini App</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Bangers', cursive;
+            background-image: url('https://images.unsplash.com/photo-1554058003-3e5e26d7d81f?auto=format&fit=crop&w=1920&q=80');
+            background-size: cover;
+            background-attachment: fixed;
+            color: #ffffff;
+            min-height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            max-width: 700px;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 15px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(5px);
+        }
+        .section-title {
+            @apply text-3xl mb-6 text-center text-[#00ff00] tracking-wide;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .btn {
+            @apply bg-[#1b73e8] text-white py-3 px-6 rounded-lg shadow-lg hover:bg-[#ff4500] transition-all duration-300 transform hover:scale-105;
+            border: 3px solid #ffffff;
+            font-size: 1.2rem;
+            letter-spacing: 1px;
+        }
+        .btn:hover {
+            box-shadow: 0 0 15px rgba(255, 69, 0, 0.8);
+        }
+        .grid {
+            @apply grid grid-cols-1 sm:grid-cols-2 gap-4;
+        }
+        h1 {
+            @apply text-5xl text-center mb-8 text-[#ffcc00] tracking-wider;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.7);
+        }
+        .error-message {
+            @apply text-red-500 text-center mt-4;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
-    <div class="container mx-auto p-4">
-        <h1 class="text-2xl font-bold mb-4 text-center">Mini App</h1>
+<body>
+    <div class="container">
+        <h1>Roblox Style PC Control</h1>
+        <div id="error-message" class="error-message hidden"></div>
 
-        <!-- Discord Section -->
         <div class="mb-8">
-            <h2 class="section-title text-xl font-semibold mb-2">Discord Commands</h2>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="authorizeDiscord()">Authorize Discord</button>
-            <input id="server-id" type="text" placeholder="Enter Discord Server ID" class="border p-2 mb-2 w-full">
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="openDiscordServer()">Open Discord Server</button>
+            <h2 class="section-title">Control Commands</h2>
+            <div class="grid">
+                <button class="btn" onclick="sendCommand('/install_vnc')">Install VNC</button>
+                <button class="btn" onclick="sendCommand('/get_ip')">Get IP</button>
+                <button class="btn" onclick="sendCommand('/stream_screen')">Stream Screen</button>
+                <button class="btn" onclick="sendCommand('/stop_stream')">Stop Stream</button>
+                <button class="btn" onclick="sendCommand('/move_mouse')">Move Mouse</button>
+                <button class="btn" onclick="sendCommand('/click')">Click</button>
+                <button class="btn" onclick="sendCommand('/scroll')">Scroll</button>
+                <button class="btn" onclick="sendCommand('/press_key')">Press Key</button>
+                <button class="btn" onclick="sendCommand('/run_command')">Run Command</button>
+                <button class="btn" onclick="sendCommand('/list_files')">List Files</button>
+                <button class="btn" onclick="sendCommand('/delete_file')">Delete File</button>
+                <button class="btn" onclick="sendCommand('/copy_file')">Copy File</button>
+                <button class="btn" onclick="sendCommand('/open_image')">Open Image</button>
+                <button class="btn" onclick="sendCommand('/alt_tab')">Alt+Tab</button>
+                <button class="btn" onclick="sendCommand('/move_up')">Move Up</button>
+                <button class="btn" onclick="sendCommand('/move_right')">Move Right</button>
+                <button class="btn" onclick="sendCommand('/disable_mouse')">Disable Mouse</button>
+                <button class="btn" onclick="sendCommand('/screenshot')">Screenshot</button>
+                <button class="btn" onclick="sendCommand('/open_discord')">Open Discord</button>
+            </div>
         </div>
 
-        <!-- Mouse Control Section -->
         <div class="mb-8">
-            <h2 class="section-title text-xl font-semibold mb-2">Mouse Control</h2>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('screenshot')">Screenshot</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('open_image')">Open Image</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('alt_tab')">Alt+Tab</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('move_up')">Move Up</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('move_right')">Move Right</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('disable_mouse')">Disable Mouse</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('get_ip')">Get IP</button>
-            <button class="btn bg-blue-500 text-white px-4 py-2 rounded" onclick="sendCommand('install_vnc')">Install VNC</button>
+            <h2 class="section-title">Grok Commands</h2>
+            <div class="grid">
+                <button class="btn" onclick="sendCommand('/grok')">Grok</button>
+                <button class="btn" onclick="sendCommand('/edit_code')">Edit Code</button>
+                <button class="btn" onclick="sendCommand('/update_code')">Update Code</button>
+                <button class="btn" onclick="sendCommand('/restart_bot')">Restart Bot</button>
+            </div>
         </div>
 
-        <!-- Trolling Commands Section -->
-        <div class="mb-8">
-            <h2 class="section-title text-xl font-semibold mb-2">Trolling Commands</h2>
-            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_open_notepad')">Open Notepad</button>
-            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_open_rickroll')">Open Rickroll</button>
-            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_fake_virus')">Fake Virus</button>
-            <button class="btn bg-red-500 text-white px-4 py-2 rounded" onclick="sendCommand('troll_mouse_shake')">Mouse Shake</button>
-        </div>
-
-        <!-- Grok Commands Section -->
-        <div class="mb-8">
-            <h2 class="section-title text-xl font-semibold mb-2">Grok Commands</h2>
-            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('grok')">Ask Grok</button>
-            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('edit_code')">Edit Code</button>
-            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('update_code')">Update Code</button>
-            <button class="btn bg-green-500 text-white px-4 py-2 rounded" onclick="sendCommand('restart_bot')">Restart Bot</button>
+        <div>
+            <h2 class="section-title">Trolling Commands</h2>
+            <div class="grid">
+                <button class="btn" onclick="sendCommand('/troll_sound1')">Sound Error</button>
+                <button class="btn" onclick="sendCommand('/troll_sound2')">Sound Notification</button>
+                <button class="btn" onclick="sendCommand('/troll_sound3')">Sound Ring</button>
+                <button class="btn" onclick="sendCommand('/troll_random_move')">Random Move</button>
+                <button class="btn" onclick="sendCommand('/troll_open_rickroll')">Open Rickroll</button>
+                <button class="btn" onclick="sendCommand('/troll_open_meme')">Open Meme</button>
+                <button class="btn" onclick="sendCommand('/troll_open_cat')">Open Cat</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_hack')">Fake Hack</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_error')">Fake Error</button>
+                <button class="btn" onclick="sendCommand('/troll_type_joke')">Type Joke</button>
+                <button class="btn" onclick="sendCommand('/troll_open_notepad')">Open Notepad</button>
+                <button class="btn" onclick="sendCommand('/troll_volume_up')">Volume Up</button>
+                <button class="btn" onclick="sendCommand('/troll_volume_down')">Volume Down</button>
+                <button class="btn" onclick="sendCommand('/troll_capslock')">Caps Lock</button>
+                <button class="btn" onclick="sendCommand('/troll_random_click')">Random Click</button>
+                <button class="btn" onclick="sendCommand('/troll_open_calculator')">Open Calculator</button>
+                <button class="btn" onclick="sendCommand('/troll_open_paint')">Open Paint</button>
+                <button class="btn" onclick="sendCommand('/troll_minimize_all')">Minimize All</button>
+                <button class="btn" onclick="sendCommand('/troll_maximize')">Maximize</button>
+                <button class="btn" onclick="sendCommand('/troll_type_chaos')">Type Chaos</button>
+                <button class="btn" onclick="sendCommand('/troll_open_youtube')">Open YouTube</button>
+                <button class="btn" onclick="sendCommand('/troll_open_browser')">Open Browser</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_update')">Fake Update</button>
+                <button class="btn" onclick="sendCommand('/troll_mouse_circle')">Mouse Circle</button>
+                <button class="btn" onclick="sendCommand('/troll_sound_loop')">Sound Loop</button>
+                <button class="btn" onclick="sendCommand('/troll_open_sticky')">Open Sticky</button>
+                <button class="btn" onclick="sendCommand('/troll_type_rickroll')">Type Rickroll</button>
+                <button class="btn" onclick="sendCommand('/troll_open_cmd')">Open CMD</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_shutdown')">Fake Shutdown</button>
+                <button class="btn" onclick="sendCommand('/troll_mouse_zigzag')">Mouse Zigzag</button>
+                <button class="btn" onclick="sendCommand('/troll_open_explorer')">Open Explorer</button>
+                <button class="btn" onclick="sendCommand('/troll_sound_ding')">Sound Ding</button>
+                <button class="btn" onclick="sendCommand('/troll_type_meme')">Type Meme</button>
+                <button class="btn" onclick="sendCommand('/troll_open_clock')">Open Clock</button>
+                <button class="btn" onclick="sendCommand('/troll_random_scroll')">Random Scroll</button>
+                <button class="btn" onclick="sendCommand('/troll_open_photos')">Open Photos</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_virus')">Fake Virus</button>
+                <button class="btn" onclick="sendCommand('/troll_mouse_jump')">Mouse Jump</button>
+                <button class="btn" onclick="sendCommand('/troll_open_control')">Open Control</button>
+                <button class="btn" onclick="sendCommand('/troll_sound_beep')">Sound Beep</button>
+                <button class="btn" onclick="sendCommand('/troll_type_nonsense')">Type Nonsense</button>
+                <button class="btn" onclick="sendCommand('/troll_open_settings')">Open Settings</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_crash')">Fake Crash</button>
+                <button class="btn" onclick="sendCommand('/troll_mouse_shake')">Mouse Shake</button>
+                <button class="btn" onclick="sendCommand('/troll_open_taskmgr')">Open Task Manager</button>
+                <button class="btn" onclick="sendCommand('/troll_sound_alert')">Sound Alert</button>
+                <button class="btn" onclick="sendCommand('/troll_type_emoji')">Type Emoji</button>
+                <button class="btn" onclick="sendCommand('/troll_open_snip')">Open Snip</button>
+                <button class="btn" onclick="sendCommand('/troll_fake_battery')">Fake Battery</button>
+                <button class="btn" onclick="sendCommand('/troll_mouse_random')">Mouse Random</button>
+                <button class="btn" onclick="sendCommand('/troll_open_weather')">Open Weather</button>
+                <button class="btn" onclick="sendCommand('/troll_sound_chime')">Sound Chime</button>
+            </div>
         </div>
     </div>
 
     <script>
-        // Initialize Telegram Web App
-        Telegram.WebApp.ready();
-        Telegram.WebApp.expand();
-        Telegram.WebApp.setHeaderColor('#f4e7d3');
-        Telegram.WebApp.setBackgroundColor('#f4e7d3');
+        // Проверка готовности Telegram Web App
+        if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
+            Telegram.WebApp.ready();
+            Telegram.WebApp.expand();
+            Telegram.WebApp.setHeaderColor('#1b73e8');
+            Telegram.WebApp.setBackgroundColor('#1b73e8');
 
-        // Send command to Telegram Bot
-        function sendCommand(command) {
-            Telegram.WebApp.sendData(command);
-            Telegram.WebApp.close();
-        }
-
-        // Authorize Discord
-        function authorizeDiscord() {
-            const clientId = "1392978255505657948"; // Замените на ваш Client ID
-            const redirectUri = encodeURIComponent("https://gusikthebest.github.io/teleg/auth");
-            const oauthUrl = `https://discord.com/oauth2/authorize?client_id=1392978255505657948&response_type=code&redirect_uri=https%3A%2F%2Fgusikthebest.github.io%2Fteleg%2Fauth&scope=identify+guilds`;
-            window.open(oauthUrl, '_blank');
-        }
-
-        // Open Discord Server
-        function openDiscordServer() {
-            const serverId = document.getElementById('server-id').value;
-            if (!serverId) {
-                alert('Please enter a Discord Server ID');
-                return;
+            function sendCommand(command) {
+                try {
+                    Telegram.WebApp.sendData(command);
+                    Telegram.WebApp.close();
+                } catch (e) {
+                    document.getElementById('error-message').innerText = 'Ошибка отправки команды: ' + e.message;
+                    document.getElementById('error-message').classList.remove('hidden');
+                }
             }
-            Telegram.WebApp.sendData(JSON.stringify({ command: 'open_discord_server', server_id: serverId }));
-            Telegram.WebApp.close();
+        } else {
+            document.getElementById('error-message').innerText = 'Telegram Web App не инициализирован. Пожалуйста, откройте через Telegram.';
+            document.getElementById('error-message').classList.remove('hidden');
         }
     </script>
 </body>
